kubernetes/apps/database/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-and-local-ingress
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - host
        - remote-node
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: database
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: immich
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: security
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "6379"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: renovate
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
  egress:
    - toEntities:
        - host
        - remote-node
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: database
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toCIDR:
        - 172.16.20.7/32 # Garage
      toPorts:
        - ports:
            - port: "3900"
              protocol: TCP
            - port: "3903"
              protocol: TCP

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-world-to-vernemq
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vernemq
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
            - port: "8883"
              protocol: TCP
            - port: "8080"
              protocol: TCP
            - port: "8443"
              protocol: TCP
